fix(responsive): fix height issue on mobile devices

--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -267,8 +267,14 @@
   .h-\[145px\] {
     height: 145px;
   }
+  .h-dvh {
+    height: 100dvh;
+  }
   .h-screen {
     height: 100vh;
+  }
+  .h-svw {
+    height: 100svw;
   }
   .min-h-screen {
     min-height: 100vh;
